--- a/cobrinha.html
+++ b/cobrinha.html
@@ -92,4 +92,4 @@
                 const block = snakeBody[i];
                 const blockElement = createBlock(block.x, block.y);
                 blockElement.style.backgroundColor = 'green';
-                gameBoard.appendChild(blockElement);
+                gameBoard.appendChild(blockElement);}}
